# cortex-r

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  tests.sh
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: build.yml
arm-targets/: Cargo.toml  README.md
arm-targets/src/: lib.rs
cortex-a-rt/: Cargo.toml  README.md  build.rs  link.x
cortex-a-rt/src/: lib.rs
cortex-ar/: Cargo.toml  README.md
cortex-ar/src/: asm.rs  critical_section.rs  interrupt.rs  lib.rs  mmu.rs  pmsav7.rs
cortex-ar/src/generic_timer/: el0.rs  el2.rs
cortex-ar/src/register/: actlr.rs  adfsr.rs  aifsr.rs  cpacr.rs  ctr.rs  dfar.rs  dspsr.rs  fcseidr.rs  iciallu.rs  id_afr0.rs  id_isar1.rs  id_isar3.rs  id_isar5.rs  id_mmfr1.rs  id_mmfr2.rs  id_mmfr3.rs  id_mmfr4.rs  id_pfr0.rs  midr.rs  mpidr.rs  nsacr.rs  par.rs  pmceid0.rs  pmceid1.rs  pmcntenclr.rs  pmcntenset.rs  pmcr.rs  pmevcntr0.rs  pmevcntr1.rs  pmevtyper3.rs  pmintenclr.rs  pmintenset.rs  pmovsr.rs  pmovsset.rs  pmxevcntr.rs  pmxevtyper.rs  rgnr.rs
cortex-ar/src/register/armv8r/: cnthctl.rs  cnthp_cval.rs  cnthp_tval.rs  cntkctl.rs  cntp_ctl.rs  cntp_tval.rs  cntv_cval.rs  cntv_tval.rs  hacr.rs  hactlr2.rs  haifsr.rs  hamair0.rs  hamair1.rs  hcptr.rs  hcr.rs  hmair0.rs  hmair1.rs  hmpuir.rs  hprbar.rs  hprbar1.rs  hprbar10.rs  hprbar11.rs  hprbar12.rs  hprbar15.rs  hprbar3.rs  hprlar13.rs  hprlar14.rs  hprlar2.rs  hprlar3.rs  hprlar5.rs  hsctlr.rs  htpidr.rs  prbar0.rs  prbar1.rs  prbar2.rs  prbar3.rs  prlar.rs  prlar0.rs  prlar1.rs  prlar10.rs  (+2 more)
cortex-ar/src/register/imp/: imp_atcmregionr.rs  imp_bpctlr.rs  imp_btcmregionr.rs  imp_buildoptr.rs  imp_cdbgdcd.rs  imp_cdbgdci.rs  imp_cdbgdr1.rs  imp_csctlr.rs  imp_ctcmregionr.rs  imp_dcerr0.rs  imp_dcerr1.rs  imp_flasherr1.rs  imp_intmonr.rs  imp_memprotctlr.rs  imp_slavepctlr.rs  imp_tcmerr0.rs  imp_tcmsyndr0.rs
cortex-r/: Cargo.toml  README.md  build.rs
cortex-r-examples/: Cargo.toml  README.md  build.rs  versatileab.ld
cortex-r-examples/.cargo/: config.toml
cortex-r-examples/reference/: gic-armv8r-none-eabihf.out  hello-armv8r-none-eabihf.out  registers-armv7r-none-eabi.out  registers-armv7r-none-eabihf.out  registers-armv8r-none-eabihf.out  svc-armv8r-none-eabihf.out
cortex-r-examples/src/: lib.rs
cortex-r-rt/: Cargo.toml  README.md  build.rs  link.x
cortex-r-rt/src/: lib.rs
cortex-r/src/: asm.rs  lib.rs  pmsav7.rs  pmsav8.rs
cortex-r/src/generic_timer/: el0.rs  el1.rs  mod.rs
cortex-r/src/register/: actlr2.rs  aidr.rs  amair0.rs  amair1.rs  ccsidr.rs  clidr.rs  cntfrq.rs  cnthp_tval.rs  cntkctl.rs  cntp_ctl.rs  cntp_tval.rs  cntv_ctl.rs  cntv_tval.rs  contextidr.rs  cpsr.rs  csselr.rs  dfsr.rs  dlr.rs  dracr.rs  drbar.rs  drsr.rs  icc_pmr.rs  id_dfr0.rs  id_isar0.rs  id_isar2.rs  id_isar4.rs  id_mmfr0.rs  id_pfr1.rs  ifar.rs  ifsr.rs  imp_flasherr0.rs  iracr.rs  irbar.rs  irsr.rs  mair0.rs  mair1.rs  midr.rs  mod.rs  mpuir.rs  pmccfiltr.rs  (+31 more)
cortex-r/src/register/armv8r/: cbar.rs  cntfrq.rs  cnthctl.rs  cnthp_ctl.rs  cntp_cval.rs  cntpct.rs  cntv_ctl.rs  cntvct.rs  cntvoff.rs  hactlr.rs  hadfsr.rs  hcr2.rs  hdcr.rs  hdfar.rs  hifar.rs  hpfar.rs  hprbar0.rs  hprbar13.rs  hprbar14.rs  hprbar2.rs  hprbar4.rs  hprbar5.rs  hprbar6.rs  hprbar7.rs  hprbar8.rs  hprbar9.rs  hprenr.rs  hprlar.rs  hprlar0.rs  hprlar1.rs  hprlar10.rs  hprlar11.rs  hprlar12.rs  hprlar15.rs  hprlar4.rs  hprlar6.rs  hprlar7.rs  hprlar8.rs  hprlar9.rs  hprselr.rs  (+22 more)
cortex-r/src/register/imp/: imp_bustimeoutr.rs  imp_cbar.rs  imp_cdbgdct.rs  imp_cdbgdr0.rs  imp_cdbgdr2.rs  imp_cdbgicd.rs  imp_cdbgict.rs  imp_flashifregionr.rs  imp_icerr0.rs  imp_icerr1.rs  imp_periphpregionr.rs  imp_pinoptr.rs  imp_qosr.rs  imp_tcmerr1.rs  imp_tcmsyndr1.rs  imp_testr0.rs  mod.rs
examples/mps3-an536/: Cargo.toml  README.md  build.rs
examples/mps3-an536/src/: lib.rs
examples/versatileab/: Cargo.toml  build.rs
examples/versatileab/reference/: hello-armv7r-none-eabihf.out  registers-armv7a-none-eabi.out  registers-armv7r-none-eabi.out  svc-armv7a-none-eabi.out
examples/versatileab/src/: lib.rs
src/: lib.rs
