[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>", "The Cortex-R Team <cortex-r@teams.rust-embedded.org>"]
default-run = "hello"
description = "Examples for Arm Cortex-R"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cortex-r-examples"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-r.git"
rust-version = "1.82"
version = "0.1.0"

[dependencies]
arm-gic = {git = "https://github.com/google/arm-gic.git", rev = "46a8fc1720f5c28fccf4dfb5953b88dab7012e9c", optional = true}
cortex-r = {path = "../cortex-r", features = ["critical-section-single-core"]}
cortex-r-rt = {path = "../cortex-r-rt"}
semihosting = {version = "0.1.18", features = ["stdio"]}

[build-dependencies]
arm-targets = {version = "0.1.0", path = "../arm-targets"}

[features]
eabi-fpu = ["cortex-r-rt/eabi-fpu"]
gic = ["arm-gic"]

[[bin]]
name = "gic"
required-features = ["gic"]
