[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>", "The Cortex-R Team <cortex-r@teams.rust-embedded.org>"]
description = "Run-time support for Arm Cortex-R"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cortex-r-rt"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-r.git"
rust-version = "1.82"
version = "0.1.0"

[dependencies]
cortex-r = {version = "0.1.0", path = "../cortex-r"}
semihosting = {version = "0.1.18", features = ["stdio"]}

[features]
# Enable the FPU on start-up, even on a soft-float EABI target
eabi-fpu = []

[build-dependencies]
arm-targets = {version = "0.1.0", path = "../arm-targets"}
