[package]
authors = ["Jonathan Pallant <jonathan.pallant@ferrous-systems.com>", "The Cortex-R Team <cortex-r@teams.rust-embedded.org>"]
default-run = "hello"
edition = "2021"
name = "mps3-an536"
description = "Examples for MPS3-AN536 device (Arm Cortex-R)"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-embedded/cortex-ar.git"
homepage = "https://github.com/rust-embedded/cortex-ar.git"
rust-version = "1.82"
version = "0.1.0"

[dependencies]
cortex-ar = { path = "../../cortex-ar", features = ["critical-section-single-core"] }
cortex-r-rt = { path = "../../cortex-r-rt" }
semihosting = { version = "0.1.18", features = ["stdio"] }
arm-gic = { git = "https://github.com/google/arm-gic.git", rev = "46a8fc1720f5c28fccf4dfb5953b88dab7012e9c", optional = true }

[build-dependencies]
arm-targets = {version = "0.1.0", path = "../../arm-targets"}

[features]
eabi-fpu = ["cortex-r-rt/eabi-fpu"]
gic = ["arm-gic"]

[[bin]]
name = "gic"
required-features = ["gic"]
